<resources>
    <string name="app_name">理财</string>
    <string name="welcome_info">欢迎您使用随手记账！</string>
    <string name="grid_payout_add">记录消费</string>
    <string name="grid_payout_manage">查询消费</string>
    <string name="grid_account_manage">账本管理</string>
    <string name="grid_statistics_manage">统计管理</string>
    <string name="grid_category_manage">类别管理</string>
    <string name="grid_user_manage">人员管理</string>

    <string name="hint_user_name">人员名称</string>
    <string name="hint_account_book_name">账本名称</string>
    <string name="hint_enter_amount">请输入金额</string>
    <string name="hint_enter_category">请输入或选择消费类别</string>
    <string name="hint_select_user">请选择消费人，第一位为付款人</string>
    <string name="hint_enter_comment">请输入消费心得或备注</string>

    <string name="title_add">新建</string>
    <string name="title_edit">修改</string>
    <string name="title_user">人员管理（%s）</string>
    <string name="title_account_book">账本管理（%s）</string>
    <string name="title_category">类别管理（%s）</string>
    <string name="title_category_add_or_edit">%s类别</string>
    <string name="title_payout">查询消费-%1$s(%2$s)</string>
    <string name="title_statistics">统计管理-%s</string>
    <string name="title_payout_add_or_edit">%s消费</string>

    <string name="button_text_save">保存</string>
    <string name="button_text_cancel">取消</string>
    <string name="button_text_yes">是</string>
    <string name="button_text_no">否</string>
    <string name="button_text_select_account_book">选择账本</string>
    <string name="button_text_enter_amount">输入金额</string>
    <string name="button_text_select_category">选择类别</string>
    <string name="button_text_select_date">选择日期</string>
    <string name="button_text_select_type">计算方式</string>
    <string name="button_text_select_user">消费人</string>
    <string name="button_text_dot">.</string>
    <string name="button_text_one">1</string>
    <string name="button_text_two">2</string>
    <string name="button_text_three">3</string>
    <string name="button_text_four">4</string>
    <string name="button_text_five">5</string>
    <string name="button_text_six">6</string>
    <string name="button_text_seven">7</string>
    <string name="button_text_eight">8</string>
    <string name="button_text_nine">9</string>
    <string name="button_text_zero">0</string>
    <string name="button_text_change">更正</string>
    <string name="button_text_ok">确定</string>
    <string name="button_text_back">返回</string>

    <string name="dialog_title_user">%s人员</string>
    <string name="dialog_title_delete">删除提示</string>
    <string name="dialog_title_account_book">%s账本</string>
    <string name="dialog_title_statistics_progress">统计</string>
    <string name="dialog_waiting_statistics_progress">正在统计中，请稍候……</string>

    <string name="dialog_message_user_delete">您确定要删除%s用户吗？</string>
    <string name="dialog_message_category_delete">您确定要删除%s类别吗？</string>
    <string name="dialog_message_payout_delete">你确定要删除%s消费记录吗？</string>
    <string name="dialog_message_account_book_delete">%s账本删除后相关消费记录也将被删除，确定？</string>

    <string name="check_text_chinese_english_num">%s必须是中文、英文与数字</string>
    <string name="check_text_user_exist">该用户已经存在，请换个用户名称</string>
    <string name="check_text_account_book_exist">该账本已经存在，请换个账本名称</string>
    <string name="check_text_money">金额必须是数字，并且不能超过小数点后两位</string>
    <string name="check_text_category_is_null">请选择一个消费类别</string>
    <string name="check_text_date_is_after">请选择一个正确的日期</string>
    <string name="check_text_payout_user_is_null">请选择消费人</string>
    <string name="check_text_payout_user">均分或借贷请至少选择两个消费人</string>
    <string name="check_text_payout_user2">个人消费请至少选择一个消费人</string>
    <string name="check_text_parent_is_self">悟空！你又调皮了~</string>
    <string name="check_box_text_is_default">设置为默认账本</string>

    <string name="tips_delete_fail">删除失败</string>
    <string name="tips_add_fail">保存失败</string>
    <string name="tips_add_success">保存成功</string>

    <string name="menu_text_edit">修改</string>
    <string name="menu_text_delete">删除</string>

    <string name="textview_text_children_category">%s子类</string>
    <string name="textview_text_category_name">类别名称</string>
    <string name="textview_text_category_parentid">所属分类</string>
    <string name="textview_text_payout_amount">消费金额：%s元</string>
    <string name="textview_text_payout_total">共%1$s笔，合计消费%2$s元</string>

    <string name="dialog_message_backup_success">数据备份成功</string>
    <string name="dialog_message_backup_fail">数据备份失败</string>
    <string name="dialog_message_restore_success">数据还原成功</string>
    <string name="dialog_message_restore_fail">数据还原失败</string>

    <string name="spinner_please_choose">--请选择--</string>
    <string name="category_total">统计类别</string>
    <string name="export_data_fail">导出失败！</string>
</resources>
