<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_alignParentTop="true"
        style="@style/NumberButtonText"
        android:text="@string/button_text_dot"
        android:id="@+id/dot_btn"
        />
    <EditText
        android:layout_width="188dp"
        android:layout_height="63dp"
        android:layout_toRightOf="@id/dot_btn"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:id="@+id/display_et"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/display_et"
        style="@style/NumberButtonText"
        android:text="@string/button_text_one"
        android:id="@+id/one_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/display_et"
        android:layout_toRightOf="@id/one_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_two"
        android:id="@+id/two_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/display_et"
        android:layout_toRightOf="@id/two_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_three"
        android:id="@+id/three_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/display_et"
        android:layout_toRightOf="@id/three_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_four"
        android:id="@+id/four_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/one_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_five"
        android:id="@+id/five_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/one_btn"
        android:layout_toRightOf="@id/five_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_six"
        android:id="@+id/six_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/one_btn"
        android:layout_toRightOf="@id/six_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_seven"
        android:id="@+id/seven_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/one_btn"
        android:layout_toRightOf="@id/seven_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_eight"
        android:id="@+id/eight_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/five_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_nine"
        android:id="@+id/nine_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/five_btn"
        android:layout_toRightOf="@id/nine_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_zero"
        android:id="@+id/zero_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/five_btn"
        android:layout_toRightOf="@id/zero_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_change"
        android:id="@+id/change_btn"
        />
    <Button
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_below="@id/five_btn"
        android:layout_toRightOf="@id/change_btn"
        style="@style/NumberButtonText"
        android:text="@string/button_text_ok"
        android:id="@+id/ok_btn"
        />
</RelativeLayout>