<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="0,1"
        android:id="@+id/payout_btn_box_tl"
        >
        <TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text_save"
                android:id="@+id/payout_save_btn"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text_cancel"
                android:id="@+id/payout_cancel_btn"
                />
        </TableRow>
    </TableLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/payout_btn_box_tl"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/box"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/payout_account_book_icon"
                    android:id="@+id/payout_select_account_book_iv"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_text_select_account_book"
                    android:id="@+id/payout_select_account_book_btn"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/payout_select_account_book_btn"
                    android:layout_toRightOf="@id/payout_select_account_book_iv"
                    android:focusable="false"
                    android:textColor="@color/black"
                    android:id="@+id/payout_select_account_book_et"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/payout_amount_icon"
                    android:id="@+id/payout_enter_amount_iv"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_text_enter_amount"
                    android:id="@+id/payout_enter_amount_btn"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/payout_enter_amount_btn"
                    android:layout_toRightOf="@id/payout_enter_amount_iv"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_enter_amount"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:id="@+id/payout_enter_amount_et"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/payout_category_icon"
                    android:id="@+id/payout_select_category_iv"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_text_select_category"
                    android:id="@+id/payout_select_category_btn"
                    />
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/payout_select_category_btn"
                    android:layout_toRightOf="@id/payout_select_category_iv"
                    android:hint="@string/hint_enter_category"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:completionThreshold="1"
                    android:dropDownWidth="match_parent"
                    android:id="@+id/payout_select_category_actv"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_text_select_date"
                    android:id="@+id/payout_select_date_btn"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/payout_select_date_btn"
                    android:focusable="false"
                    android:textColor="@color/black"
                    android:id="@+id/payout_select_date_et"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_text_select_type"
                    android:id="@+id/payout_select_type_btn"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/payout_select_type_btn"
                    android:focusable="false"
                    android:textColor="@color/black"
                    android:id="@+id/payout_select_type_et"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_text_select_user"
                    android:id="@+id/payout_select_user_btn"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/payout_select_user_btn"
                    android:hint="@string/hint_select_user"
                    android:maxLines="1"
                    android:focusable="false"
                    android:textColor="@color/black"
                    android:id="@+id/payout_select_user_et"
                    />
            </RelativeLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:lines="8"
                android:hint="@string/hint_enter_comment"
                android:gravity="fill_horizontal"
                android:maxLength="300"
                android:textColor="@color/black"
                android:id="@+id/payout_comment_et"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>